kubernetes/33.emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-aggregator
  labels:
    app: content-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-aggregator
  template:
    metadata:
      labels:
        app: content-aggregator
    spec:
      containers:
      - name: content-fetcher
        image: busybox:1.36
        command: ["/bin/sh", "-c"]
        resources: {}
        args:
        - while true; do
            echo "<p>Fetching content at $(date)</p>" >> /shared-data/index.html;
                  sleep 5;
                  done
        volumeMounts:
        - name: shared-volume
          mountPath: /shared-data

      - name: content-server
        image: nginx:1.27
        resources: {}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
          readOnly: true

      volumes:
      - name: shared-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: content-aggregator
spec:
  selector:
    app: content-aggregator
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-aggregator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-external
  rules:
  - host: content.onprem.kuberise.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: content-aggregator
            port:
              number: 80
